src/Afup/BarometreBundle/Resources/assets/sass/_map.scss
#map {
  float: left;
  margin-right: 1ex;
  text-align: center;
  width: 100%;

  svg {
    height: 500px;
    width: 500px;
  }
}

#background path {
  fill: none;
  stroke: #000;
  stroke-width: .2px;
}


div.tooltip {
  background: #b0c4de;
  border: 0;
  border-radius: 8px;
  font: .78em;
  height: 28px;
  padding: 2px;
  position: absolute;
  text-align: center;
}

